[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "maat"
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58.workspace = true
cid.workspace = true
futures-util = "0.3.30"
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
subxt = { workspace = true, features = ["substrate-compat"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

primitives-proofs = { workspace = true, features = ["serde"] }
storagext = { workspace = true, features = ["insecure_url"] }

zombienet-configuration = "0.2.9"
zombienet-sdk = "0.2.9"
zombienet-support = "0.2.9"

[lints]
workspace = true
