[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "primitives"
repository.workspace = true
version = "0.1.0"

[dependencies]
cid = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
codec = { workspace = true, features = ["derive"] }
filecoin-proofs = { workspace = true, optional = true }
scale-decode = { workspace = true, features = ["derive"] }
scale-encode = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sealed = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
sha2 = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

[lints]
workspace = true

[features]
clap = ["dep:clap", "std"]
default = ["std"]
serde = ["dep:serde"]
std = [
  "cid/scale-codec",
  "cid/std",
  "codec/std",
  "dep:filecoin-proofs",
  "scale-info/std",
  "serde/std",
  "sha2/std",
  "sp-api/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "thiserror/std",
]
