[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "polka-storage-provider"
repository.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server", "ws-client"] }
mater = { workspace = true }
# primitives-proofs = { workspace = true, features = ["std"]}
pallet-market = { workspace = true, features = ["std"]}
sp-runtime = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sc-cli = { workspace = true }
sealed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
