[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "polka-storage-provider"
repository.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
bls12_381 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cid = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive"] }
codec = { workspace = true }
filecoin-hashers.workspace = true
fr32.workspace = true
futures = { workspace = true }
hex = { workspace = true }
ipld-core.workspace = true
jsonrpsee = { workspace = true, features = ["http-client", "macros", "server", "ws-client"] }
polka-storage-proofs = { workspace = true, features = ["std", "substrate"] }
primitives-proofs = { workspace = true, features = ["std"] }
sc-cli = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storage-proofs-core.workspace = true
subxt = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# "Homegrown" crates
mater = { workspace = true }
storagext = { workspace = true, features = ["clap", "insecure_url"] }

[lints]
workspace = true
