[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "polka-storage-provider"
repository.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
chrono = { workspace = true, features = ["serde"] }
cid = { workspace = true }
clap = { workspace = true, features = ["derive"] }
filecoin-hashers.workspace = true
fr32.workspace = true
futures = { workspace = true }
ipld-core.workspace = true
jsonrpsee = { workspace = true, features = ["http-client", "macros", "server", "ws-client"] }
sc-cli = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storage-proofs-core.workspace = true
subxt = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# "Homegrown" crates
mater = { workspace = true }
storagext = { workspace = true, features = ["clap", "insecure_url"] }

[lints]
workspace = true
