[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "peer-resolver"
repository.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
libp2p = { workspace = true, features = ["identify", "macros", "noise", "rendezvous", "tcp", "tokio", "yamux"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
