[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "polka-storage-proofs"
repository.workspace = true
version = "0.1.0"

[dependencies]
bls12_381 = { workspace = true }
codec = { workspace = true, features = ["derive"], default-features = false }
pairing = { workspace = true }
scale-info = { workspace = true, features = ["derive"], default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
rand = { workspace = true, default-features = false, features = ["alloc"] }

[lints]
workspace = true

[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "sp-std/std"]
