[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "proof-utilities"
repository.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bellperson = "0.26.0"
bls12_381 = { workspace = true }
blstrs = "0.7"
ff = "0.13"
filecoin-hashers = "13.1"
filecoin-proofs = "18.1"
fr32 = "11.1"
merkletree = "0.23"
polka-storage-proofs = { workspace = true, default-features = true }
rand = { workspace = true }
rand_xorshift = "0.3"
sha2 = { workspace = true }
storage-proofs-core = "18.1"
storage-proofs-porep = "18.1"
tempfile = "3.0"

[dev-dependencies]
pallet-storage-provider = { workspace = true, default-features = true }
