[package]
authors.workspace = true
description = "handles deal interactions between Storage Clients and Storage Providers"
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "pallet-market"
publish = false
repository.workspace = true
version = "0.0.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cid = { workspace = true, default-features = false, features = ["scale-codec"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }
log = { workspace = true }
multihash-codetable = { workspace = true, features = ["blake2b"] }
primitives = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true, default-features = false }

# frame deps
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
blake2b_simd = { workspace = true, default-features = true }
cid = { workspace = true, default-features = false, features = ["alloc", "scale-codec"] }
env_logger = { workspace = true }
pallet-balances = { workspace = true, default-features = false }
pallet-proofs = { workspace = true, default-features = false }
pallet-storage-provider = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "cid/std",
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "pallet-balances/std",
  "primitives/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "sp-runtime/try-runtime"]
